Corrige advertencias en JwtUtil